# infrahub-jsonschema

./: .gitignore  README.md  pyproject.toml  test_schema_validation.py  validate_schemas.py
.github/workflows/: validate-schemas.yml
schemas/develop/: schema.schema.json
schemas/infrahub/menu/: develop.json
schemas/infrahub/schema/: 0.13.0.json  0.14.0.json  0.15.0.json  0.16.0.json  1.0.0.json  1.1.0.json  1.10.0.json  1.2.0.json  1.3.0.json  1.4.0.json  1.5.0.json  1.8.0.json  1.9.0.json  develop.json
schemas/python-sdk/repository-config/: 0.11.0.json  0.12.0.json  0.9.0.json  1.0.0.json  1.12.0.json  1.13.0.json  1.18.0.json  1.19.0.json  1.21.0.json  1.22.0.json  1.8.0.json
schemas/versions/0.11.0/: infrahub_schema.schema.json
schemas/versions/0.6.0/: infrahub_schema.schema.json
schemas/versions/0.8.2/: infrahub_schema.schema.json
stable/: infrahub_schema.schema.json
tests/: test_schema_validation.py
tests/test_data/infrahub_schema/: basic_all.yml  invalid_all.yml
tests/test_data/repository_configs/: basic_all.yml  invalid_all.yml
versions/0.5.0/: infrahub_schema.schema.json
