[tool.poetry]
name = "infrahub-schema"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "infrahub_schema"}]

[tool.poetry.dependencies]
python = "^3.9, < 3.12"
infrahub = {path = "../infrahub", develop = true}
invoke = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
